Added {chapters} binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -851,8 +851,8 @@
 						<td>&lt;subtitle streams&gt;</td>
 						<td><kbd class="type">[String:String]*</kbd></td>
 					</tr>
-					<tr id="menu">
-						<td><kbd class="variable">menu</kbd></td>
+					<tr id="chapters">
+						<td><kbd class="variable">chapters</kbd></td>
 						<td><a href="forums/viewtopic.php?t=4285">chapter information</a></td>
 						<td>&lt;chapter information&gt;</td>
 						<td><kbd class="type">[String:String]</kbd></td>
