Return ZonedDateTime instead of Instant

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -621,7 +621,7 @@
 						<td><kbd class="variable">dt</kbd></td>
 						<td>media creation date</td>
 						<td>&lt;date and time&gt;</td>
-						<td><kbd class="type">Instant</kbd></td>
+						<td><kbd class="type">DateTime</kbd></td>
 					</tr>
 					<tr id="vs">
 						<td><kbd class="variable">vs</kbd></td>
@@ -819,7 +819,7 @@
 						<td><kbd class="variable">ct</kbd></td>
 						<td>file creation date</td>
 						<td>&lt;date and time&gt;</td>
-						<td><kbd class="type">Instant</kbd></td>
+						<td><kbd class="type">DateTime</kbd></td>
 					</tr>
 					<tr id="crc32">
 						<td><kbd class="variable">crc32</kbd></td>
