Add {vk} binding to tag 4K / 8K files

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -509,6 +509,12 @@
 						<td>384i</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
+					<tr id="vk">
+						<td><kbd class="variable">vk</kbd></td>
+						<td>4K resolution</td>
+						<td>4K</td>
+						<td><kbd class="type">String</kbd></td>
+					</tr>
 					<tr id="aco">
 						<td><kbd class="variable">aco</kbd></td>
 						<td><a href="forums/viewtopic.php?t=14536">audio codec profile</a></td>
