Ensure that example uses RATIO and not COLON

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -799,8 +799,8 @@
 					</tr>
 					<tr id="hours">
 						<td><kbd class="variable">hours</kbd></td>
-						<td>duration in HH:mm</td>
-						<td>0:23</td>
+						<td>duration in HH∶mm</td>
+						<td>0∶23</td>
 						<td><kbd class="type">String</kbd></td>
 					</tr>
 					<tr id="bytes">
