--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -38,6 +38,12 @@
 	<meta property="og:type" content="product" />
 	<meta property="og:url" content="@{link.site.index}" />
 	<meta property="og:image" content="@{link.image.logo}" />
+
+	<!-- Reddit Pixel -->
+	<script>
+	!function(w,d){if(!w.rdt){var p=w.rdt=function(){p.sendEvent?p.sendEvent.apply(p,arguments):p.callQueue.push(arguments)};p.callQueue=[];var t=d.createElement("script");t.src="https://www.redditstatic.com/ads/pixel.js",t.async=!0;var s=d.getElementsByTagName("script")[0];s.parentNode.insertBefore(t,s)}}(window,document);rdt('init','a2_i1bybq0vz361');rdt('track', 'PageVisit');
+	</script>
+	<!-- End Reddit Pixel -->
 </head>
 <body>
 	<div class="page">
