--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -15,6 +15,12 @@
 	<link rel="preload" href="nav-a-bg-h.svg" as="image">
 
 	<base href="@{link.site.index}" target="_blank">
+
+	<!-- Reddit Pixel -->
+	<script>
+	!function(w,d){if(!w.rdt){var p=w.rdt=function(){p.sendEvent?p.sendEvent.apply(p,arguments):p.callQueue.push(arguments)};p.callQueue=[];var t=d.createElement("script");t.src="https://www.redditstatic.com/ads/pixel.js",t.async=!0;var s=d.getElementsByTagName("script")[0];s.parentNode.insertBefore(t,s)}}(window,document);rdt('init','a2_i1bybq0vz361');rdt('track', 'PageVisit');
+	</script>
+	<!-- End Reddit Pixel -->
 </head>
 <body>
 	<div class="page">
