--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -245,7 +245,7 @@
 				<p>
 					The project is continuously seeking for improvements, so any kind of <a href="forums/viewforum.php?f=8">feedback</a> is more than welcome 
 					and if there's any questions or problems just start posting in the <a href="forums/">forums</a> or check the <a href="manual.html">FAQ</a>.
-					We're social as well. Follow us on <a href="https://twitter.com/filebot_renamer">Twitter</a> or join our <a href="channel.html">Discord </a> channel.
+					We're social as well. Follow us on <a href="https://twitter.com/filebot_renamer">Twitter</a> and <a href="https://www.reddit.com/r/filebot/">Reddit</a> or join our <a href="channel.html">Discord </a> channel.
 				</p>
 			</div>
 		</div>
